--- a/challenge-1.ipynb
+++ b/challenge-1.ipynb
@@ -7,9 +7,15 @@
     "tags": []
    },
    "source": [
-    "## Challenge 1:\n",
-    "<br>\n",
-    "**Write the program read frist name and last name from user and print last name and first name and include space between thim"
+    "## Challenge 1:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662454dd-e59a-4a31-99c9-f4194f118695",
+   "metadata": {},
+   "source": [
+    "**Write the program read frist name and last name from user and print last name and first name and include space between thim**"
    ]
   },
   {
