--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36792a80-ba8f-4188-a0a6-abd40b775edb",
+   "id": "02a3eec2-8346-44a3-abd7-33a41fe49006",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Challenge 2:\n",
-    "<br>\n",
-    "** Write the python program witch accept the heigth and width from user and print thr rectaangle area **\n",
+    "## Challenge 2:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a33f7a09-6634-4981-bb81-ae8c78a0e504",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "**Write the python program witch accept the heigth and width from user and print thr rectaangle area**\n",
     "<br>\n",
     "*Ex.*\n",
     "<br>\n",
@@ -18,6 +26,14 @@
     "\n",
     "Print: Area of rectangle = 50"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caa7387a-a177-4814-89c8-924c74d3353c",
+   "metadata": {
+    "tags": []
+   },
+   "source": []
   },
   {
    "cell_type": "code",
