--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -114,9 +114,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1a6cb6e-4590-4ce7-ba9f-9191c28f9f03",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b1b00f-e995-45cb-a35a-330eeef136b8",
+   "metadata": {},
+   "source": [
+    "### Another solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ac7df66-6117-4d0c-980f-7f85cd46a3ee",
+   "metadata": {},
+   "source": [
+    "*import the constant pi from math module*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dde34535-1db1-4e84-b4b9-239ba69c454d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7017ab8a-9116-4679-b373-c5a40bb642ad",
+   "metadata": {},
+   "source": [
+    "Create a function to culc radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "deeb2960-1a71-454a-a67f-bc9e26e49893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def culcRadius(area):\n",
+    "    return pi * area**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9b575ab6-7d1d-47f5-9af6-b9122ab4ee6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the area:  3.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read the area from user\n",
+    "area = float(input(\"Please enter the area: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "64b8d4d4-6b2e-49b3-b111-97f65f827fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The raduis = 45.36459791783661\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the result\n",
+    "print(\"The raduis = \" + str(culcRadius(area)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce17f48-3145-45e6-9cf9-d2ca240b9e9a",
+   "id": "0b949273-8096-4082-b295-c2dd9073451d",
    "metadata": {},
    "outputs": [],
    "source": []
